--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ server.tomcat.access_log_enabled: true
 server.tomcat.basedir: target/tomcat
 spring.security.user.name=admin
 spring.security.user.password=admin
+spring.data.cassandra.port=9042
+spring.data.cassandra.keyspace-name=cassandra
+spring.data.cassandra.contact-points=127.0.0.1
+spring.data.cassandra.schema-action=recreate_drop_unused
+fhir.server.url=http://hapi.fhir.org/baseDstu3
+fhir.server.resource.count=10
